--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Dudu</h1>
     Eduardo A.
-     <img src="cr77.avif" alt="o goat">
+     <img src="cr77.avif" alt="cristiano ronaldo">
 </body>
 </html>
