--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>Dudu projeto</title>
    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> 
+    <header class="cabecalho"> </header>
     <h1>Dudu</h1>
     Eduardo A.
-     <img src="cr77.avif" alt="cristiano ronaldo">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ullam rerum fuga, corporis possimus mollitia impedit tenetur delectus ea atque deserunt, omnis, doloremque exercitationem ad ipsam rem culpa voluptatem dignissimos!</p>
+     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa consectetur laudantium rerum delectus est odit officiis, eos minima dolorum? Consectetur itaque, magnam quos fugiat rem aut quas quis odit! Vel.</p>
+    <img src="cr77.avif" alt="cristiano ronaldo">
+   
 </body>
 </html>
