--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body> 
     <header class="cabecalho"> </header>
+    <section class="primeirasecao">
+
+    </section>
     <h1>Dudu</h1>
     Eduardo A.
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ullam rerum fuga, corporis possimus mollitia impedit tenetur delectus ea atque deserunt, omnis, doloremque exercitationem ad ipsam rem culpa voluptatem dignissimos!</p>
