--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body> 
     <header class="cabecalho"> </header>
     <section class="primeirasecao">
+<div class="divisao">
 
+</div>
+<div class="divisao">
+
+</div>
     </section>
     <h1>Dudu</h1>
     Eduardo A.
