--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dudu projeto</title>
-   <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body> 
+
+<body>
     <header class="cabecalho"> </header>
     <section class="primeirasecao">
-<div class="divisao">
+        <div class="divisao">
 
-</div>
-<div class="divisao">
+        </div>
+        <div class="divisao">
 
-</div>
+        </div>
     </section>
     <h1>Dudu</h1>
     Eduardo A.
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ullam rerum fuga, corporis possimus mollitia impedit tenetur delectus ea atque deserunt, omnis, doloremque exercitationem ad ipsam rem culpa voluptatem dignissimos!</p>
-     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa consectetur laudantium rerum delectus est odit officiis, eos minima dolorum? Consectetur itaque, magnam quos fugiat rem aut quas quis odit! Vel.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ullam rerum fuga, corporis possimus mollitia impedit
+        tenetur delectus ea atque deserunt, omnis, doloremque exercitationem ad ipsam rem culpa voluptatem dignissimos!
+    </p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa consectetur laudantium rerum delectus est odit
+        officiis, eos minima dolorum? Consectetur itaque, magnam quos fugiat rem aut quas quis odit! Vel.</p>
     <img src="cr77.avif" alt="cristiano ronaldo">
-   
+
 </body>
+
 </html>
