--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     <header class="cabecalho"> </header>
     <section class="primeirasecao">
         <div class="divisao">
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint minima aliquid explicabo aperiam, maxime vitae, et molestiae recusandae, sit saepe aliquam facilis neque officia sequi quibusdam autem soluta. Impedit, harum.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint minima aliquid explicabo aperiam, maxime
+                vitae, et molestiae recusandae, sit saepe aliquam facilis neque officia sequi quibusdam autem soluta.
+                Impedit, harum.</p>
         </div>
         <div class="divisao">
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut, sit veniam ipsam quibusdam neque eveniet adipisci earum, repellat fuga suscipit odio ex impedit. Molestiae perferendis aliquid at animi veniam mollitia?</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut, sit veniam ipsam quibusdam neque eveniet
+                adipisci earum, repellat fuga suscipit odio ex impedit. Molestiae perferendis aliquid at animi veniam
+                mollitia?</p>
         </div>
     </section>
 
